<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />
        <import type="android.widget.CompoundButton" />
        <variable
            name="viewmodel"
            type="com.wisal.android.todoapp.testing.viewmodels.TaskDetailViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.TaskDetailFragment">

        <CheckBox
            android:id="@+id/complete_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="28dp"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:checked="@{viewmodel.task.completed}"
            android:onClick="@{(view) -> viewmodel.setCompleted(((CompoundButton)view).isChecked)}"/>

        <TextView
            android:id="@+id/title_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@{viewmodel.task.title}"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintBottom_toBottomOf="@+id/complete_checkbox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/complete_checkbox"
            app:layout_constraintTop_toTopOf="@+id/complete_checkbox" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit_task_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="28dp"
            android:src="@drawable/ic_edit"
            app:fabSize="normal"
            app:layout_anchorGravity="bottom|right|end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>