<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.wisal.android.todoapp.testing.viewmodels.StatisticsViewModel" />
    </data>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.StatisticsFragment"
    android:id="@+id/statistics_fragment_container">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/statistics_no_tasks"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="@{viewmodel.empty ? View.VISIBLE : View.GONE}" />

    <TextView
        android:id="@+id/stats_active_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="1dp"
        android:text="@{@string/statistics_active_tasks(viewmodel.activeTasksPercent)}"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="@{viewmodel.empty ? View.GONE : View.VISIBLE}" />


    <TextView
        android:id="@+id/stats_completed_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="1dp"
        android:text="@{@string/statistics_completed_tasks(viewmodel.completedTasksPercent)}"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="@{viewmodel.empty ? View.GONE : View.VISIBLE}" />


</LinearLayout>

</layout>