...
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:visibility="@{viewmodel.dataLoading ? View.GONE : View.VISIBLE}">

        <EditText
            android:id="@+id/add_task_title_edit_text"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_hint"
            android:imeOptions="flagNoExtractUi"
            android:maxLines="1"
...
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_task_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_done"
        android:onClick="@{() -> viewmodel.saveTask()}"
        app:fabSize="normal"
...
