...

        <argument
            android:name="taskId"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="title"
            app:argType="string"
            app:nullable="false" />
        <action
            android:id="@+id/action_addEditFragment_to_tasksFragment"
            app:destination="@id/tasksFragment" />

...
